python-apt (0.7.13.4) UNRELEASED; urgency=low

  * po/zh_CN.po:
    - updated, thanks to Feng Chao 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 23 Sep 2009 15:32:13 +0200

python-apt (0.7.13.3) unstable; urgency=low

  [ Michael Vogt ]
  * apt/cache.py:
    - add actiongroup() method (backport from 0.7.92)
    - re-work the logic in commit() to fail if installArchives() returns
      a unexpected result
  * apt/progress/__init__.py:
    - catch exceptions in pm.DoInstall()

  [ Sebastian Heinlein ]
  * apt/package.py:
    - Export if a package is an essential one (Closes: #543428)

  [ Julian Andres Klode ]
  * python/depcache.cc:
    - Make ActionGroups context managers so apt.Cache.actiongroup() has
      the same behavior as in 0.7.92
  * apt/cache.py:
    - Add raiseOnError option to Cache.update() (Closes: #545474)
  * apt/package.py:
    - Use the source version instead of the binary version in fetch_source().
  * apt/progress/__init__.py:
    - Correctly ignore ECHILD by checking before EINTR (Closes: #546007)

 -- Julian Andres Klode <jak@debian.org>  Tue, 15 Sep 2009 15:18:45 +0200

python-apt (0.7.13.2) unstable; urgency=low

  * apt/cache.py:
   - Convert argument to str in __getitem__() (Closes: #542965).

 -- Julian Andres Klode <jak@debian.org>  Sat, 22 Aug 2009 22:47:30 +0200

python-apt (0.7.13.1) unstable; urgency=low

  * apt/package.py:
   - Fix Version.get_dependencies() to not ignore the arguments.

 -- Julian Andres Klode <jak@debian.org>  Fri, 21 Aug 2009 16:59:08 +0200

python-apt (0.7.13.0) unstable; urgency=low

  [ Michael Vogt ]
  * apt/package.py:
    - add "recommends" property
  * apt/cache.py, python/cache.cc:
    - add optional pulseInterval option to "update()"

  [ Sebastian Heinlein ]
  * apt/cache.py:
   - Fix the (inst|keep|broken|del)_count attributes (Closes: #542773).

  [ Julian Andres Klode ]
  * apt/package.py:
   - Introduce Version.get_dependencies() which takes one or more types