@@ -2,6 +2,9 @@ python-apt (0.7.13.4) UNRELEASED; urgency=low
 
   * po/zh_CN.po:
     - updated, thanks to Feng Chao 
+  * python/progress.cc:
+    - if the mediaChange() does not return anything or is not implemented
+      send "false" to libapt
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 23 Sep 2009 15:32:13 +0200
 
